--- a/src/App.css
+++ b/src/App.css
@@ -65,29 +65,25 @@
 }
 
 .container {
-  margin: 65vh auto;
+  margin: 70vh auto;
 }
 
-.container form {
-  float: left;
-  margin: 1.5rem auto;
-  margin-left: -22%;
-}
-
-.container form button {
+.upload {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 700;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #ffffff;
   cursor: pointer;
   transition: border-color 0.25s;
   margin: 1.5rem auto;
+  font-style: normal;
+  margin-left: -35%;
 }
 
-button:hover {
+.upload:hover {
   border-color: #646cff;
 }
 
